<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Pinball Beauties</string>
    <string name="independent_flippers_pref_title">Independent Flippers</string>
    <string name="independent_flippers_pref_summary_on">A touch activates the flippers on the same side of the screen</string>
    <string name="independent_flippers_pref_summary_off">Any touch activates all flippers</string>
    <string name="line_width_pref_title">Line Width</string>
    <string name="line_width_pref_dialog_message">Enter the line width in pixels, or 0 to use a default width based on the screen resolution.</string>
    <string name="sound_pref_title">Sound</string>
    <string name="music_pref_title">Background Music</string>
    <string name="haptic_feedback_pref_title">Haptic Feedback</string>
    <string name="show_fps_pref_title">Show FPS</string>
    <string name="zoom_pref_title">Zoom Playfield</string>
    <string name="use_opengl_pref_title">OpenGL Rendering</string>
    <string name="about_text">Pinball Beauties 1.0.0, work based on Vector Pinball 1.12.1\n© 2010–2023 Brian Nenninger\n\nComments and bug reports:\nemailimappop3test@gmail.com\n\nhttps://github.com/robmat/android_pinball_with_pics_as_prize\n\nTouch the screen to start a new game, launch a ball if one is not in play, and activate the flippers. Touch the score area to pause the game.\n\n[TABLE_RULES]\n\nThe Preferences menu item allows you to change the following settings:\n- Sound: Enables and disables sound effects.\n- Background Music: Enables and disabled background music.\n- Haptic Feedback: Vibrates on bumper hits and other game events.\n- Independent Flippers: When unchecked, any touch activates both flippers. When checked, you must touch the left side of the screen for the left flipper, and the right side for the right flipper.\n- Zoom: When checked, the view will zoom in on the ball\'s location during play.\n- OpenGL Rendering: Uses OpenGL to draw graphics. This usually provides the best combination of graphics quality and performance, but some devices may do better with it disabled.\n- Show FPS: When checked, shows frames drawn per second in the upper left.\n\nVector Pinball is open source; the code is at\nhttps://github.com/dozingcat/Vector-Pinball\n\nThanks to Mario Zechner for code improvements and libgdx.\n\nsound, music, &amp; audio code, by pdx\nTwittering Machine\nhttps://www.twittering.com</string>
    <string name="table1_rules" tools:ignore="UnusedResources">Table Rules:\n- Light all the cyan rollovers in the top or bottom lanes to advance the score multiplier. All points you earn will be multiplied by this amount. Shooting the left ramp will also advance the multiplier.\n- The game starts with ball savers in the left and right outlanes, which disappear when used. Hit all drop targets on the left or right side to restore them.\n- Hitting any group of drop targets will activate the next light in the center of the field. When the large white central light is activated, shoot the left ramp to start multiball.</string>
    <string name="table2_rules" tools:ignore="UnusedResources">Table Rules:\n- Light all the cyan rollovers in the bottom lanes to advance the score multiplier. All points you earn will be multiplied by this amount. \n- The game starts with ball savers in the left and right outlanes, which disappear when used. Hit all drop targets on the left or right side to restore them.\n- The circles in the middle of the field keep track of how many times you\'ve hit all the left, upper, and right drop targets. When all of them have been hit at least 3 times, shoot the red bumper in the upper right to start multiball.</string>
    <string name="table3_rules" tools:ignore="UnusedResources">Table Rules:\n- Light all the cyan rollovers in the bottom lanes to advance the score multiplier. All points you earn will be multiplied by this amount. \n- The game starts with ball savers in the left and right outlanes, which disappear when used. Hit all drop targets on the left or right side to restore them.\n- Shooting either ramp will turn the bumpers red, and they will change back to blue over several seconds. Hit them during this time for extra points.\n- Turn the middle rings red by hitting the bumpers, and the middle sets of drop targets. When all the rings are red, shoot either ramp to start multiball.</string>
    <string name="table4_rules" tools:ignore="UnusedResources">Table Rules:\n- Each bumper increases the score multiplier by 0.01x. Shooting the top drop targets or lighting all the lane rollovers will increase this amount.\n- Shoot all six bumpers to light the center indicators. When all indicators for a row are lit, shoot the right hole to lock the ball for multiball.\n- Multiball starts when you lock three balls. During multiball, the center indicators will light up when a ball crosses over them. Light them all to score a jackpot.\n- The game starts with ball savers in the left and right outlanes, which disappear when used. Hit all drop targets on the left or right side to restore them.</string>
    <string name="table5_rules" tools:ignore="UnusedResources">Table Rules:\n- The central circle has twelve points around it, 3 each of 4 colors. Shooting a top ramp will change the color of the ball and allow it to activate the points with matching color.\n- When all 12 points around the circle are activated, hitting the edges of the rotating triangle will remove them. Shoot the target in the middle of the triangle to start multiball.\n- During multiball, light the 12 circle points again to score a jackpot, which increases in value each time.\n- The game starts with ball savers in the left and right outlanes, which disappear when used. Hit all drop targets on the left or right side to restore them.</string>
    <string name="table6_rules" tools:ignore="UnusedResources">Table Rules:\n- In the center of the table, five planets orbit a sun. When the ball rolls over one of the planets, it changes to the planet\'s color and the planet starts flashing.\n- Shoot the corresponding target to &quot;activate&quot; the planet and make it solid. For the inner orange planet, hit the targets in the upper left. For the second blue planet, activate the rollovers in the upper right. For the remaining planets, shoot the ramp of the matching color.\n- Activate all five planets to start multiball. In multiball, activate all the planets again for a jackpot.\n- The game starts with ball savers in the left and right outlanes, which disappear when used. Hit all drop targets on the left or right side to restore them.\n- The sun and planets have gravity and will attract balls when they get close.</string>
    <string name="table7_rules" tools:ignore="UnusedResources">Table Rules:\n- The center of the table contains a star map. Shoot one of the ramps with the flashing green arrows to cause the map to move to a constellation.\n- The stars that make up the constellation will appear in green. Roll the ball over them to activate them; they will turn yellow and lines will connect activated stars to draw the constellation outline.\n- When the constellation outline is complete, shoot the right ramp with the flashing yellow arrow to lock the ball. Repeat this process with two more constellations. Locking the third ball will start multiball.\n- In multiball, complete the remaining constellations and then shoot the right ramp for a jackpot.\n- The game starts with ball savers in the left and right outlanes, which disappear when used. Hit all drop targets on the left or right side to restore them.</string>
    <string name="change_table_button_label">Select Table</string>
    <string name="previous_table_content_description">Previous table</string>
    <string name="next_table_content_description">Next table</string>
    <string name="game_paused_content_description">Game paused</string>
    <string name="help_button_label">Help</string>
    <string name="preferences_button_label">Preferences</string>
    <string name="start_game_button_label">Start Game</string>
    <string name="resume_game_button_label">Resume Game</string>
    <string name="end_game_button_label">End Game</string>
    <string name="quit_button_label">Quit</string>
    <string name="unlimited_balls_label">Unlimited Balls</string>
    <string name="ball_number_message" tools:ignore="UnusedResources">Ball %1$d</string>
    <string name="shoot_again_message" tools:ignore="UnusedResources">Shoot Again</string>
    <string name="ball_saved_message" tools:ignore="UnusedResources">Ball Saved</string>
    <string name="game_over_message" tools:ignore="UnusedResources">Game Over</string>
    <string name="bump_message" tools:ignore="UnusedResources">Bump!</string>
    <string name="touch_to_start_message">Touch to start</string>
    <string name="last_score_message">Last Score: %1$s</string>
    <string name="top_high_score_message">High Score: %1$s</string>
    <string name="other_high_score_message" tools:ignore="PluralsCandidate">#%1$d Score: %2$s</string>
    <string name="no_high_scores_message">No scores for this table</string>
    <string name="left_save_enabled_message" tools:ignore="UnusedResources">Left Save Enabled</string>
    <string name="right_save_enabled_message" tools:ignore="UnusedResources">Right Save Enabled</string>
    <string name="shoot_ramp_multiball_message" tools:ignore="UnusedResources">Shoot Ramp for Multiball</string>
    <string name="multiball_started_message" tools:ignore="UnusedResources">Multiball!</string>
    <string name="multiplier_message" tools:ignore="UnusedResources">%1$dx Multiplier</string>
    <string name="shoot_red_bumper_message" tools:ignore="UnusedResources">Shoot Red Bumper</string>
    <string name="bumper_multiplier_message" tools:ignore="UnusedResources">Bumper Multiplier %1$d%%"</string>
    <string name="jackpot_received_message" tools:ignore="UnusedResources">Jackpot!</string>
    <string name="jackpot_received_with_multipler_message" tools:ignore="UnusedResources">%1$dx Jackpot!</string>
    <string name="multiball_ready_message" tools:ignore="UnusedResources">Multiball Ready</string>
    <string name="ball_lock_ready_message" tools:ignore="UnusedResources">Ball Lock Ready</string>
    <string name="ball_locked_message" tools:ignore="UnusedResources,PluralsCandidate">Ball %1$d Locked</string>
    <string name="shoot_pyramid_message" tools:ignore="UnusedResources">Shoot the Pyramid!</string>
    <string name="extra_ball_received_message" tools:ignore="UnusedResources">Extra Ball!</string>
    <string name="blue_ramp_bonus_message" tools:ignore="UnusedResources">Blue ramp +%1$d%%</string>
    <string name="red_ramp_bonus_message" tools:ignore="UnusedResources">Red ramp +%1$d%%</string>
    <string name="yellow_ramp_bonus_message" tools:ignore="UnusedResources">Yellow ramp +%1$d%%</string>
    <string name="green_ramp_bonus_message" tools:ignore="UnusedResources">Green ramp +%1$d%%</string>
    <string name="color_blue" tools:ignore="UnusedResources">Blue</string>
    <string name="color_red" tools:ignore="UnusedResources">Red</string>
    <string name="color_yellow" tools:ignore="UnusedResources">Yellow</string>
    <string name="color_green" tools:ignore="UnusedResources">Green</string>
    <string name="planet_activated_message" tools:ignore="UnusedResources,PluralsCandidate">Planet %1$d Activated!</string>
    <string name="ramp_bonus_message" tools:ignore="UnusedResources">%1$dx Ramp</string>
    <string name="rate_this_app">If you liked this app, rate it!</string>
    <string name="we_will_stop_showing_ads">As a sign of gratitude we will show a bit less ads.</string>
    <string name="rate_this_app_now">Rate this app now!</string>
    <string name="rate_this_app_later">Rate this app later.</string>
    <string name="rate_this_app_never">Do not rate this app at all.</string>
</resources>