<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="Preferences">
	
		<CheckBoxPreference android:key="sound" android:defaultValue="true" android:enabled="true"
		    android:title="@string/sound_pref_title" />
		
		<CheckBoxPreference android:key="music" android:defaultValue="true" android:enabled="true"
		    android:title="@string/music_pref_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="true"
            android:key="haptic"
            android:title="@string/haptic_feedback_pref_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:enabled="true"
            android:key="independentFlippers"
            android:summaryOff="@string/independent_flippers_pref_summary_off"
            android:summaryOn="@string/independent_flippers_pref_summary_on"
            android:title="@string/independent_flippers_pref_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="true"
            android:key="zoom"
            android:title="@string/zoom_pref_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:enabled="true"
            android:key="useOpenGL"
            android:title="@string/use_opengl_pref_title" />

        <EditTextPreference
            android:dialogMessage="@string/line_width_pref_dialog_message"
            android:enabled="true"
            android:inputType="number"
            android:key="lineWidth"
            android:title="@string/line_width_pref_title" />

        <CheckBoxPreference
            android:enabled="true"
            android:key="showFPS"
            android:title="@string/show_fps_pref_title" />

    </PreferenceCategory>
</PreferenceScreen>
