<!-- popup_rate_app.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/btn_background_pressed"
    android:orientation="vertical"
    android:padding="60dp">

    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/light_grey"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/rate_this_app"
        android:gravity="center"
        android:textSize="20sp"
        android:padding="8dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/we_will_stop_showing_ads"
        android:textColor="@color/light_grey"
        android:gravity="center"
        android:textSize="11sp"
        android:padding="8dp"
        android:textStyle="bold" />

    <!-- Add your star rating UI here -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/star" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/star" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/star" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/star" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/star" />

    </LinearLayout>

    <Button
        android:id="@+id/btnRateNow"
        android:background="@drawable/btn_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/light_grey"
        android:layout_margin="8dp"
        android:text="@string/rate_this_app_now" />

    <Button
        android:id="@+id/btnRateLater"
        android:background="@drawable/btn_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/light_grey"
        android:layout_margin="8dp"
        android:text="@string/rate_this_app_later" />

    <Button
        android:id="@+id/btnNeverRate"
        android:background="@drawable/btn_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/light_grey"
        android:layout_margin="8dp"
        android:text="@string/rate_this_app_never" />
</LinearLayout>
